--- a/charts/evm-rollup/values.yaml
+++ b/charts/evm-rollup/values.yaml
@@ -68,8 +68,8 @@ config:
       # set to enable prometheus metrics
       enabled: false
     otel:
-      enabled: false
-      endpoint:
+      enabled: true
+      endpoint: "http://otel-collector.monitoring.svc.cluster.local:4317"
       tracesEndpoint:
       tracesCompression: gzip
       tracesTimeout: 10
