--- a/charts/evm-rollup/values.yaml
+++ b/charts/evm-rollup/values.yaml
@@ -69,8 +69,8 @@ config:
       enabled: false
     otel:
       enabled: true
-      endpoint: otel-collector.monitoring.svc.cluster.local:4317
-      tracesEndpoint: 
+      endpoint: 'http://otel-collector.monitoring.svc.cluster.local:4317'
+      tracesEndpoint: 'http://otel-collector.monitoring.svc.cluster.local:4317'
       tracesCompression: gzip
       tracesTimeout: 10
       otlpHeaders:
