--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -13,7 +13,7 @@ name = "astria-composer"
 
 [dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
-astria-core = { path = "../astria-core", features = ["serde"] }
+astria-core = { path = "../astria-core", features = ["serde", "server"] }
 astria-eyre = { path = "../astria-eyre" }
 config = { package = "astria-config", path = "../astria-config" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
@@ -50,6 +50,9 @@ tokio = { workspace = true, features = [
 tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
 tryhard = { workspace = true }
+tonic = { workspace = true }
+tokio-stream = { workspace = true, features = ["net"] }
+tonic-health = "0.10.2"
 
 [dependencies.sequencer-client]
 package = "astria-sequencer-client"
@@ -65,6 +68,7 @@ test_utils = { package = "astria-test-utils", path = "../astria-test-utils", fea
 ] }
 insta = { workspace = true, features = ["json"] }
 tokio-test = { workspace = true }
+astria-core = { path = "../astria-core", features = ["client"] }
 tendermint-rpc = { workspace = true }
 wiremock = { workspace = true }
 
