core: change display formatting rollup ID, address, asset ID to base64

--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -23,7 +23,6 @@ merkle = { package = "astria-merkle", path = "../astria-merkle" }
 bytes = { workspace = true }
 celestia-tendermint = { workspace = true }
 ed25519-consensus = { workspace = true }
-hex = { workspace = true }
 ibc-types = { workspace = true }
 indexmap = { workspace = true }
 pbjson-types = { workspace = true }
@@ -39,15 +38,14 @@ thiserror = { workspace = true }
 tonic = { workspace = true, optional = true }
 tracing = { workspace = true }
 base64-serde = { workspace = true, optional = true }
-base64 = { workspace = true, optional = true }
+base64 = { workspace = true }
 
 [features]
 client = ["dep:tonic"]
-serde = ["dep:serde", "dep:pbjson", "dep:base64", "dep:base64-serde"]
+serde = ["dep:serde", "dep:pbjson", "dep:base64-serde"]
 server = ["dep:tonic"]
 test-utils = ["dep:rand"]
 base64-serde = ["dep:base64-serde"]
-base64 = ["dep:base64"]
 
 [dev-dependencies]
 rand = { workspace = true }
