--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     needs: run_checker
-    #  if: needs.run_checker.outputs.run_release_charts == 'true'
+    if: needs.run_checker.outputs.run_release_charts == 'true'
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
