ci: add Fraser999 to codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-*	@joroshiba @noot @SuperFluffy
+*	@joroshiba @noot @SuperFluffy @Fraser999
 
 /.github/	@astriaorg/infra
 /containerfiles/	@astriaorg/infra
