--- a/crates/astria-telemetry/Cargo.toml
+++ b/crates/astria-telemetry/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://astria.org"
 
 [dependencies]
 base64 = { workspace = true, optional = true }
+base64-serde = { workspace = true, optional = true }
 
 metrics-exporter-prometheus = { version = "0.13.1", default-features = false, features = [
   "http-listener",
@@ -25,7 +26,6 @@ opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
 opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
-serde_with = { version = "3.7.0", optional = true }
 thiserror = { workspace = true }
 tracing-opentelemetry = "0.23.0"
 tracing-subscriber = { version = "0.3.17", features = [
@@ -38,4 +38,4 @@ tracing-subscriber = { version = "0.3.17", features = [
 tracing = { workspace = true }
 
 [features]
-display = ["dep:base64", "dep:serde", "dep:serde_json", "dep:serde_with"]
+display = ["dep:base64", "dep:serde", "dep:serde_json", "dep:base64-serde"]
