--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -22,6 +22,8 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry", featur
 
 pin-project-lite = "0.2.13"
 secrecy = { version = "0.8", features = ["serde"] }
+tonic-health = "0.10.2"
+itertools = "0.11.0"
 
 async-trait = { workspace = true }
 axum = { workspace = true }
@@ -46,13 +48,13 @@ tokio = { workspace = true, features = [
   "rt-multi-thread",
   "sync",
   "time",
+  "signal",
 ] }
 tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
 tryhard = { workspace = true }
 tonic = { workspace = true }
 tokio-stream = { workspace = true, features = ["net"] }
-tonic-health = "0.10.2"
 
 [dependencies.sequencer-client]
 package = "astria-sequencer-client"
