--- a/charts/evm-rollup/templates/volumes.yaml
+++ b/charts/evm-rollup/templates/volumes.yaml
@@ -6,7 +6,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-pv
+  name: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-geth-pv
 spec:
   capacity:
     storage: {{ $value.size }}
@@ -14,7 +14,31 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-local
+  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-geth-local
+  local:
+    path: {{ $value.path }}
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - astria-dev-cluster-control-plane
+                - astria-dev-cluster-worker
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-blockscout-pv
+spec:
+  capacity:
+    storage: {{ $value.size }}
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-blockscout-local
   local:
     path: {{ $value.path }}
   nodeAffinity:
@@ -39,7 +63,7 @@ metadata:
     "helm.sh/chart": {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
 spec:
   {{- if $.Values.storage.local }}
-  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-local
+  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-geth-local
   {{- end }}
   {{- if $value.storageClassName }}
   storageClassName: {{ $value.storageClassName }}
@@ -61,7 +85,7 @@ metadata:
     "helm.sh/chart": {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
 spec:
   {{- if $.Values.storage.local }}
-  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-local
+  storageClassName: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-blockscout-local
   {{- end }}
   {{- if $value.storageClassName }}
   storageClassName: {{ $value.storageClassName }}
