--- a/dev/values/validators/single.yml
+++ b/dev/values/validators/single.yml
@@ -10,7 +10,10 @@ sequencer-relayer:
       cometbftRpc: http://node0-sequencer-rpc-service.astria-dev-cluster.svc.cluster.local:26657
       sequencerGrpc: http://node0-sequencer-grpc-service.astria-dev-cluster.svc.cluster.local:8080
   storage:
-    enabled: false
+    enabled: true
+
+storage:
+  enabled: true
 
 ingress:
   rpc:
