--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -94,6 +94,9 @@ jobs:
           install_only: true
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly-14daacfe40565b19bdfc3b78c6cf1775f54529da
+          cache: false
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
