submit blobs directly to celestia app

--- a/buf.work.yaml
+++ b/buf.work.yaml
@@ -4,3 +4,6 @@ directories:
   - proto/sequencerapis
   - proto/composerapis
   - proto/sequencerblockapis
+  - proto/vendored/celestia_app
+  - proto/vendored/celestia_core
+  - proto/vendored/cosmos_sdk
