--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ humantime = "2.1.0"
 hyper = "0.14"
 ibc-types = "0.12"
 indexmap = "2.1.0"
+itertools = "0.12.1"
 itoa = "1.0.10"
 jsonrpsee = { version = "0.20" }
 once_cell = "1.17.1"
