--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -32,6 +32,7 @@ futures = { workspace = true }
 hex = { workspace = true }
 humantime = { workspace = true }
 indexmap = { workspace = true }
+itertools = { workspace = true }
 itoa = { workspace = true }
 pbjson-types = { workspace = true }
 prost = { workspace = true }
@@ -49,7 +50,6 @@ tryhard = { workspace = true }
 async-trait = "0.1.73"
 futures-bounded = "0.2.3"
 http = "0.2.9"
-itertools = "0.12.1"
 pin-project-lite = "0.2"
 tokio-stream = "0.1.14"
 tracing-futures = { version = "0.2.5", features = ["futures-03"] }
