--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -64,7 +64,7 @@ config = { package = "astria-config", path = "../astria-config", features = [
 insta = { workspace = true, features = ["json"] }
 jsonrpsee = { workspace = true, features = ["server"] }
 once_cell = { workspace = true }
-wiremock.workspace = { workspace = true }
+wiremock = { workspace = true }
 
 chrono = "0.4.35"
 tokio-stream = { version = "0.1.15", features = ["net"] }
