--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -92,11 +92,6 @@ jobs:
         uses: helm/kind-action@v1 
         with:
           install_only: true
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly-14daacfe40565b19bdfc3b78c6cf1775f54529da
-          cache: false
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -109,7 +104,7 @@ jobs:
           TAG=sha-$(git rev-parse --short HEAD)
           just deploy cluster
           kubectl create secret generic regcred --from-file=.dockerconfigjson=$HOME/.docker/config.json --type=kubernetes.io/dockerconfigjson
-          echo "Deploying with astria images tagged $TAG"
+          echo -e "\n\nDeploying with astria images tagged $TAG"
           just deploy smoke-test $TAG
       - name: Run Smoke test
         timeout-minutes: 1
