--- a/taplo.toml
+++ b/taplo.toml
@@ -1,4 +1,5 @@
 exclude = [
   "charts/celestia-node/files/config.toml",
   "charts/sequencer/files/cometbft/config/config.toml",
+  "charts/hermes/files/config.toml",
 ]
