--- a/charts/celestia-local/templates/configmap.yaml
+++ b/charts/celestia-local/templates/configmap.yaml
@@ -7,6 +7,7 @@ data:
   home_dir: "/home/celestia"
   coins: "{{ .Values.coins }}"
   validator_stake: "{{ .Values.validatorStake }}"
+  validator_mnemonic: "{{ .Values.validatorMnemonic }}"
   chainid: "{{ .Values.chainId }}"
   keyring_backend: "{{ .Values.keyringBackend }}"
   validator_key_name: "{{ .Values.validatorKeyName }}"
