--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -1,8 +1,17 @@
 name: Reusable Docker Build && Push Workflow
 
+# TODO: Add a trust relationship for each Depot project
+permissions:
+  contents: read
+  id-token: write
+
 on:
   workflow_call:
     inputs:
+      # TODO: Create a Depot project for each image to build
+      depot-project-id:
+        required: true
+        type: string
       package-name:
         required: true
         type: string
@@ -23,7 +32,7 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: buildjet-8vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     if: startsWith(inputs.tag, inputs.package-name) || !inputs.tag && (startsWith(github.ref, format('refs/tags/{0}-v', inputs.package-name)) || github.ref == 'refs/heads/main' || github.event_name == 'pull_request' || github.event_name == 'merge_group')
     steps:
       # Checking out the repo
@@ -42,12 +51,6 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
       # Generate correct tabs and labels
       - name: Docker metadata
         id: metadata
@@ -61,7 +64,7 @@ jobs:
             # set latest tag for `main` branch
             type=raw,value=latest,enable=${{ env.FULL_REF == format('refs/heads/{0}', 'main') }}
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: depot/build-push-action@v1
         with:
           # this gets rid of the unknown/unknown image that is created without this setting
           # https://github.com/docker/build-push-action/issues/820#issuecomment-1455687416
@@ -70,10 +73,8 @@ jobs:
           file: containerfiles/Dockerfile
           build-args: |
             TARGETBINARY=${{ inputs.target-binary }}
-          platforms: 'linux/amd64,linux/arm64'
+          platforms: "linux/amd64,linux/arm64"
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
-          cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache', inputs.package-name) }}
-          cache-to: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache', inputs.package-name) }},mode=max
-        
+          project: ${{ inputs.depot-project-id }}
