pass in depot project id

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,7 +25,6 @@ on:
       - "**-v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"
       - "**-v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"
       - "**-v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
-    
   # trigger on pull request updates when target is `main` branch
   pull_request:
     types:
@@ -43,8 +42,9 @@ jobs:
   composer:
     needs: run_checker
     if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'composer')
-    uses: './.github/workflows/reusable-docker-build.yml'
+    uses: "./.github/workflows/reusable-docker-build.yml"
     with:
+      depot-project-id: TODO
       package-name: composer
       target-binary: astria-composer
       tag: ${{ inputs.tag }}
@@ -53,8 +53,9 @@ jobs:
   conductor:
     needs: run_checker
     if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'conductor')
-    uses: './.github/workflows/reusable-docker-build.yml'
+    uses: "./.github/workflows/reusable-docker-build.yml"
     with:
+      depot-project-id: TODO
       package-name: conductor
       target-binary: astria-conductor
       tag: ${{ inputs.tag }}
@@ -63,8 +64,9 @@ jobs:
   sequencer:
     needs: run_checker
     if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'sequencer')
-    uses: './.github/workflows/reusable-docker-build.yml'
+    uses: "./.github/workflows/reusable-docker-build.yml"
     with:
+      depot-project-id: TODO
       package-name: sequencer
       target-binary: astria-sequencer
       tag: ${{ inputs.tag }}
@@ -73,13 +75,14 @@ jobs:
   sequencer-relayer:
     needs: run_checker
     if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'sequencer-relayer')
-    uses: './.github/workflows/reusable-docker-build.yml'
+    uses: "./.github/workflows/reusable-docker-build.yml"
     with:
+      depot-project-id: TODO
       package-name: sequencer-relayer
       target-binary: astria-sequencer-relayer
       tag: ${{ inputs.tag }}
     secrets: inherit
-  
+
   smoke-test:
     needs: [run_checker, composer, conductor, sequencer, sequencer-relayer]
     if: github.event_name == 'merge_group' || needs.run_checker.outputs.run_docker == 'true'
@@ -89,7 +92,7 @@ jobs:
       - name: Install just
         uses: taiki-e/install-action@just
       - name: Install kind
-        uses: helm/kind-action@v1 
+        uses: helm/kind-action@v1
         with:
           install_only: true
       - name: Log in to GHCR
