update sequencer to sequencerblock dependency

--- a/proto/executionapis/buf.yaml
+++ b/proto/executionapis/buf.yaml
@@ -4,7 +4,7 @@ breaking:
   use:
     - FILE
 deps:
- - buf.build/astria/astria
+  - buf.build/astria/sequencerblock-apis
 lint:
   use:
     - BASIC
