lower level breaking allowances for now

--- a/proto/executionapis/buf.yaml
+++ b/proto/executionapis/buf.yaml
@@ -3,7 +3,7 @@ name: buf.build/astria/execution-apis
 breaking:
   ignore_unstable_packages: true
   use:
-    - FILE
+    - WIRE_JSON
 deps:
   - buf.build/astria/sequencerblock-apis
 lint:
