fix(charts): only use one of annotation and spec for ingress

--- a/charts/evm-rollup/templates/ingress.yaml
+++ b/charts/evm-rollup/templates/ingress.yaml
@@ -21,7 +21,9 @@ metadata:
       {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
+    {{- if not $ingressSupportsIngressClassName }}
     kubernetes.io/ingress.class: {{ $.Values.ingress.className }}
+    {{- end }}
   {{- if $ingressApiIsStable }}
   {{- range $key, $value := $ingress.annotations }}
     {{ $key }}: {{ tpl $value $ | quote }}
