--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -23,12 +23,13 @@ on:
         type: string
     secrets:
       DOCKER_TOKEN:
-        required: true
+        required: false
       DOCKER_USER:
-        required: true
+        required: false
 env:
   REGISTRY: ghcr.io
   FULL_REF: ${{ inputs.tag && format('refs/tags/{0}', inputs.tag) || github.ref }}
+  LOGIN_DOCKER: ${{ secrets.DOCKER_TOKEN && secrets.DOCKER_USER }}
 
 jobs:
   build-and-push:
@@ -41,6 +42,7 @@ jobs:
           ref: ${{ inputs.tag }}
       # https://github.com/docker/setup-qemu-action
       - name: Login to Docker Hub
+        if: env.DOCKER_LOGIN
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USER }}
