--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -14,9 +14,9 @@ on:
         type: string
     secrets:
       DOCKER_TOKEN:
-        required: true
+        required: false
       DOCKER_USER:
-        required: true
+        required: false
 env:
   REGISTRY: ghcr.io
   FULL_REF: ${{ inputs.tag && format('refs/tags/{0}', inputs.tag) || github.ref }}
@@ -32,6 +32,7 @@ jobs:
           ref: ${{ inputs.tag }}
       # https://github.com/docker/setup-qemu-action
       - name: Login to Docker Hub
+        if: github.repository_owner == 'astriaorg'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USER }}
@@ -71,7 +72,7 @@ jobs:
           build-args: |
             TARGETBINARY=${{ inputs.target-binary }}
           platforms: 'linux/amd64,linux/arm64'
-          push: true
+          push: ${{ github.repository_owner == 'astriaorg'}}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
           cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:buildcache', inputs.package-name) }}
