--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -29,7 +29,6 @@ on:
 env:
   REGISTRY: ghcr.io
   FULL_REF: ${{ inputs.tag && format('refs/tags/{0}', inputs.tag) || github.ref }}
-  LOGIN_DOCKER: ${{ secrets.DOCKER_TOKEN && secrets.DOCKER_USER }}
 
 jobs:
   build-and-push:
@@ -42,7 +41,7 @@ jobs:
           ref: ${{ inputs.tag }}
       # https://github.com/docker/setup-qemu-action
       - name: Login to Docker Hub
-        if: github.repository_owner == 'astriaorg'
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == 'astriaorg/astria'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USER }}
@@ -77,7 +76,7 @@ jobs:
           build-args: |
             TARGETBINARY=${{ inputs.target-binary }}
           platforms: "linux/amd64,linux/arm64"
-          push: ${{ github.repository_owner == 'astriaorg'}}
+          push: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == 'astriaorg/astria'
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
           project: ${{ inputs.depot-project-id }}
