feat(sequencer)!: update to ABCI v0.38 (#831)
## Summary

updates the sequencer app to use ABCI v0.38, which replaces
`begin_block`/`deliver_tx`/`end_block` with one call, `finalize_block`.

relevant penumbra PRs:

- update penumbra-tower-trace to re-add instrumentation to the ABCI
methods (done in https://github.com/penumbra-zone/penumbra/pull/4160)
- update cnidarium to be able to get the root hash of the state without
calling `commit` (done in
https://github.com/penumbra-zone/penumbra/pull/4122)

## Background
this was inevitable, also it cleans up the block execution flow inside
the sequencer application. (removed `processed_txs` and
`current_sequencer_block_builder` from the app)

## Changes
- implement `finalize_block`; for the most part, I left the
`begin_block`/`deliver_tx`/`end_block` as they are but called them
inside `finalize_block`
- however the block execution flow is cleaned up as we no longer need to
track how many txs have been delivered (for the commitments) and we can
construct the `SequencerBlock` at the end of `finalize_block` without
needing to track things between calls

## Testing
unit tests 

ran it with cometbft release
[v0.38.6](https://github.com/cometbft/cometbft/releases/tag/v0.38.6)

## Breaking Changelist
- the sequencer app will now only work with a cometbft version that
supports ABCI v0.38

## Related Issues

closes #679

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,9 +76,10 @@ serde_json = "1"
 metrics = "0.22.1"
 pbjson-types = "0.6"
 # Note that when updating the penumbra versions, vendored types in `proto/sequencerapis/astria_vendored` may need to be updated as well.
-penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.69.1", default-features = false }
-penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.69.1" }
-penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.69.1" }
+# update once https://github.com/penumbra-zone/penumbra/commit/8b06546af43bf073fd99f3f9d82b8afb51872489 makes it into a release
+penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "8b06546af43bf073fd99f3f9d82b8afb51872489", default-features = false }
+penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "8b06546af43bf073fd99f3f9d82b8afb51872489" }
+penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "8b06546af43bf073fd99f3f9d82b8afb51872489" }
 prost = "0.12"
 rand = "0.8.5"
 regex = "1.9"
